# DataLab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_R10.md  CODE_REVIEW_R2.md  CODE_REVIEW_R3.md  CODE_REVIEW_R4.md  CODE_REVIEW_R5.md  CODE_REVIEW_R6.md  CODE_REVIEW_R7.md  CODE_REVIEW_R8.md  CODE_REVIEW_R9.md  CONTRIBUTING.md  Data.txt  DataLab.spec  Document.md  FITTING_REVIEW_UPDATED.md  LICENSE  PDF_PREVIEW_DELIVERY.md  PDF_PREVIEW_IMPLEMENTATION_GUIDE.md  QUICK_START.en.md  QUICK_START.md  README.md  SECURITY.md  build_mac_data_gui.sh  build_windows_data_gui.bat  build_windows_data_gui.ps1  conftest.py  data_extrapolation_gui.py  data_extrapolation_latex_latest.py  desktop_doc_loader.py  findings.md  formula_help.py  gui_requirements.txt  gunicorn.conf.py  mkdocs.yml  progress.md  pyproject.toml  requirements-docs.txt  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
app_desktop/: __init__.py  about_dialog.py  auto_fit_subprocess.py  bridge_qt.py  budget_panel.py  constants_editor.py  current_page_stack.py  detected_rows_table.py  docs_dialog.py  fitting_input_normalization.py  fitting_latex_writer.py  formula_preview.py  formula_renderer.py  formula_tex_render_worker.py  history_compare_panel.py  history_panel.py  history_popup.py  latex_highlighter.py  latex_inputs_serialization.py  latex_preview_dialog.py  log_scale_spinner.py  main.py  menu_option_editors.py  menu_options.py  message_dialogs.py  numbered_text_edit.py  options_dialogs.py  panels.py  parallel_preferences.py  parameter_table.py  recipe_preview.py  report_bundle_export.py  report_bundle_preview.py  resources.py  result_csv_spec.py  result_overview_popover.py  result_status_strip.py  result_view_titles.py  root_latex_writer.py  schema_widgets.py  (+41 more)
app_web/: README_UPDATES.md  __init__.py  _security_shim.py  formula_help_web.py  latex_security.py  openapi.py  security.py  server.py  server_security_patch.py  streaming.py  test_security.py
benchmarks/: __init__.py  test_fit_performance.py  test_sampling_performance.py
cli/: __init__.py  __main__.py  batch_config.py  main.py
datalab_core/: __init__.py  _payload.py  extrapolation.py  fitting.py  fitting_comparison.py  history.py  history_compare.py  history_compare_budget.py  jobs.py  mcmc_refine.py  numeric_payload.py  parallel_options.py  recipe_provenance.py  recipes.py  report_bundle.py  results.py  root_solving.py  service_factory.py  session.py  statistics.py  statistics_bootstrap.py  statistics_compute.py  statistics_grouped.py  statistics_helpers.py  statistics_hypothesis.py  statistics_matrix.py  statistics_time_series.py  table_payload.py  uncertainty.py  uncertainty_budget.py  workbench_model.py  workspace_v2.py
datalab_latex/: __init__.py  derivatives.py  expression_engine.py  formula_render_service.py  latex_formatting.py  latex_tables.py  latex_tables_budget.py  latex_tables_common.py  latex_tables_error_propagation.py  latex_tables_extrapolation.py  latex_tables_fitting.py  latex_tables_root.py  latex_tables_statistics_grouped.py  latex_tables_statistics_matrix.py  notebook_export.py  report_bundle.py  sisetup_block.py
docs/: ARCHITECTURE.md  BATCH10_WINDOW_DECOMPOSITION_PLAN.md  CODE_REVIEW_2026.md  CODE_REVIEW_2026_R3.md  CODE_REVIEW_2026_R3_SOFT_PLAN.md  DATALAB_WEB_GUIDE.en.md  DATALAB_WEB_GUIDE.md  FULL_FILE_REVIEW_FILELIST.txt  METHODS_THEORY.aux  METHODS_THEORY.en.tex  METHODS_THEORY.out  METHODS_THEORY.tex  OVER_SPLIT_AUDIT_2026.md  PROGRAM_FRAMEWORK.aux  PROGRAM_FRAMEWORK.en.aux  PROGRAM_FRAMEWORK.en.out  PROGRAM_FRAMEWORK.en.tex  PROGRAM_FRAMEWORK.tex  SWARM_REVIEW_2026.md  TEST_MATRIX.md  numerical_validation.md
examples/: README.md  catalog.py  constants.txt  error_propagation.txt  extrapolation_richardson.txt  fitting_powerlaw.txt  statistics_weighted.txt
extrapolation_methods/: Data Extrapolation GUI.md  __init__.py  accelerators.py  power_law.py
fitting/: __init__.py  auto_models.py  comparison_formatting.py  constraints.py  diagnostic_formatting.py  diagnostics.py  hp_fitter.py  implicit_classifier.py  implicit_derivatives.py  implicit_model.py  implicit_planner.py  implicit_seed_hints.py  implicit_transforms.py  mcmc_fitter.py  model_comparison.py  model_parser.py  model_selector.py  output_inversion.py  plot_fitting.py  problem.py  report.py  runner.py  sampling_parallel.py  statistics.py  symbolic_export.py
root_solving/: __init__.py  batch.py  expression.py  formatting.py  messages.py  models.py  normalization.py  plotting.py  solver.py  uncertainty.py  uncertainty_policy.py
shared/: __init__.py  archive_validation.py  bilingual.py  caching.py  computation_inputs.py  crash_reporter.py  derivatives.py  distribution_summary.py  error_contributions.py  error_propagation_engine.py  expression_engine.py  expression_names.py  expression_registry.py  extrapolation_engine.py  fitting_engine.py  fitting_uncertainty.py  formula_defaults.py  formula_export.py  formula_latex_export.py  formula_mathtext_png.py  help_specs.json  input_normalization.py  integer_validation.py  latex_engine.py  latex_escaping.py  logging_setup.py  numerics.py  parallel_backend.py  parallel_config.py  parallel_options.py  parsing.py  pdf_preview.py  pdf_preview_integration.py  pdf_preview_raster.py  plotting.py  precision.py  presets.py  root_solving_engine.py  settings_store.py  symbolic_math.py  (+13 more)
tests/: conftest.py  test_app_desktop_bridge_qt.py  test_app_desktop_views_registry.py  test_app_desktop_workers_core.py  test_app_icon_asset.py  test_app_web_baseline_contracts.py  test_app_web_compute_rate_limit.py  test_app_web_docs_baseline.py  test_app_web_error_classification.py  test_app_web_extrapolation_latex.py  test_app_web_fitting_custom_params.py  test_app_web_fitting_latex.py  test_app_web_fitting_self_consistent.py  test_app_web_fitting_uncertainty.py  test_app_web_formula_resources_baseline.py  test_app_web_precision_clamp.py  test_app_web_precision_concurrency.py  test_app_web_route_inventory.py  test_app_web_sse_baseline.py  test_archive_validation.py  test_auto_fit_cancellation_and_timeout.py  test_auto_fit_removed.py  (+334 more)
(+225 files in other folders)
